# zxxz_surface_code_circuits

./: .gitignore  README.md  main.py  pyproject.toml
src/midout/: _make_circuit.py
src/midout/circuits/: _braiding_circuit.py  _braiding_circuit_test.py  _idle_memory_circuit.py  _idle_memory_circuit_test.py  _xz_memory_circuits.py  _xz_memory_circuits_test.py  _y_memory_circuit.py  _y_memory_circuit_test.py
src/midout/circuits/steps/: _folded_y.py  _folded_y_test.py  _measure_y_transition_round.py  _measure_y_transition_round_test.py  _patches.py  _stability_to_memory_transition_round.py  _stability_to_memory_transition_round_test.py
src/zxxz_surface_code_circuits/: __init__.py  zxxz_circuit.py
