[project]
name = "zxxz-surface-code-circuits"
version = "0.1.0"
description = "Simple script to generate ZXXZ surface code circuits"
authors = [
    { name = "Yiming Zhang", email = "zhangyiming21@mail.ustc.edu.cn" }
]
dependencies = [
    "stim>=1.14.0",
    "sinter>=1.14.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zxxz_surface_code_circuits"]
